Remove JDK21 features